Support for Camunda 8.8