@@ -7,13 +7,19 @@ import io.vanillabp.cockpit.bpms.api.v1.UserTaskCreatedOrUpdatedEvent;
 import io.vanillabp.cockpit.bpms.api.v1.WorkflowCancelledEvent;
 import io.vanillabp.cockpit.bpms.api.v1.WorkflowCompletedEvent;
 import io.vanillabp.cockpit.bpms.api.v1.WorkflowCreatedOrUpdatedEvent;
+import io.vanillabp.cockpit.bpms.api.v1_1.UserTaskCreatedEvent;
+import io.vanillabp.cockpit.bpms.api.v1_1.UserTaskUpdatedEvent;
+import io.vanillabp.cockpit.bpms.api.v1_1.WorkflowCreatedEvent;
+import io.vanillabp.cockpit.bpms.api.v1_1.WorkflowUpdatedEvent;
 import io.vanillabp.cockpit.commons.mapstruct.NoMappingMethod;
+import io.vanillabp.cockpit.devshell.simulator.businesscockpit.model.Page;
 import io.vanillabp.cockpit.gui.api.v1.Group;
 import io.vanillabp.cockpit.gui.api.v1.Person;
-import io.vanillabp.cockpit.gui.api.v1.UserTask;
-import io.vanillabp.cockpit.gui.api.v1.Workflow;
-import io.vanillabp.cockpit.gui.api.v1.WorkflowModule;
+import io.vanillabp.cockpit.gui.api.v1.UserTaskRetrieveMode;
+import io.vanillabp.cockpit.gui.api.v1.UserTasks;
+import io.vanillabp.cockpit.gui.api.v1.Workflows;
 import java.util.List;
+import java.util.stream.Collectors;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 import org.mapstruct.MappingTarget;
@@ -24,15 +30,29 @@ public abstract class OfficialApiMapper {
 
     @Mapping(target = "id", expression = "java(id)")
     @Mapping(target = "version", ignore = true)
-    public abstract WorkflowModule toApi(RegisterWorkflowModuleEvent event, String id);
+    public abstract io.vanillabp.cockpit.devshell.simulator.businesscockpit.model.WorkflowModule toModel(RegisterWorkflowModuleEvent event, String id);
+
+    @Mapping(target = "id", expression = "java(id)")
+    @Mapping(target = "version", ignore = true)
+    public abstract io.vanillabp.cockpit.devshell.simulator.businesscockpit.model.WorkflowModule toModel(io.vanillabp.cockpit.bpms.api.v1_1.RegisterWorkflowModuleEvent event, String id);
 
     @Named("group")
     @Mapping(target = "id", expression = "java(group)")
     @Mapping(target = "display", expression = "java(group)")
     @Mapping(target = "details", ignore = true)
+    public abstract io.vanillabp.cockpit.devshell.simulator.businesscockpit.model.Group toGroupModel(String group);
+
+    public TaskService.RetrieveMode toModel(UserTaskRetrieveMode retrieveMode) {
+        return TaskService.RetrieveMode.valueOf(retrieveMode.name());
+    }
+
+    @Named("apiGroup")
+    @Mapping(target = "id", expression = "java(group)")
+    @Mapping(target = "display", expression = "java(group)")
+    @Mapping(target = "details", ignore = true)
     public abstract Group toGroupApi(String group);
 
-    @Named("groups")
+    @Named("apiGroups")
     protected List<Group> toGroupsApi(List<String> groups) {
 
         if (groups == null) {
@@ -41,7 +61,42 @@ public abstract class OfficialApiMapper {
         return groups
                 .stream()
                 .map(this::toGroupApi)
-                .toList();
+                .collect(Collectors.toList());
+
+    }
+
+    @Named("apiPerson")
+    @Mapping(target = "id", expression = "java(person)")
+    @Mapping(target = "display", expression = "java(person)")
+    @Mapping(target = "displayShort", expression = "java(person)")
+    @Mapping(target = "email", ignore = true)
+    @Mapping(target = "avatar", ignore = true)
+    @Mapping(target = "details", ignore = true)
+    public abstract Person toPersonApi(String person);
+
+    @Named("apiPersons")
+    protected List<Person> toPersonsApi(List<String> persons) {
+
+        if (persons == null) {
+            return null;
+        }
+        return persons
+                .stream()
+                .map(this::toPersonApi)
+                .collect(Collectors.toList());
+
+    }
+
+    @Named("groups")
+    protected List<io.vanillabp.cockpit.devshell.simulator.businesscockpit.model.Group> toGroupsModel(List<String> groups) {
+
+        if (groups == null) {
+            return null;
+        }
+        return groups
+                .stream()
+                .map(this::toGroupModel)
+                .collect(Collectors.toList());
 
     }
 
@@ -52,52 +107,54 @@ public abstract class OfficialApiMapper {
     @Mapping(target = "email", ignore = true)
     @Mapping(target = "avatar", ignore = true)
     @Mapping(target = "details", ignore = true)
-    public abstract Person toPersonApi(String person);
+    public abstract io.vanillabp.cockpit.devshell.simulator.businesscockpit.model.Person toPersonModel(String person);
 
     @Named("persons")
-    protected List<Person> toPersonsApi(List<String> persons) {
+    protected List<io.vanillabp.cockpit.devshell.simulator.businesscockpit.model.Person> toPersonModel(List<String> persons) {
 
         if (persons == null) {
             return null;
         }
         return persons
                 .stream()
-                .map(this::toPersonApi)
-                .toList();
+                .map(this::toPersonModel)
+                .collect(Collectors.toList());
 
     }
 
     @NoMappingMethod
     protected String proxiedUiUri(
-            final WorkflowCreatedOrUpdatedEvent event) {
+            final String workflowModuleId,
+            final String uiUriPath) {
 
-        if (event.getWorkflowModuleId() == null) {
+        if (workflowModuleId == null) {
             return null;
         }
-        if (event.getUiUriPath() == null) {
+        if (uiUriPath == null) {
             return null;
         }
 
         return "/wm/"
-                + event.getWorkflowModuleId()
-                + (event.getUiUriPath().startsWith("/")
-                ? event.getUiUriPath()
-                : "/" + event.getUiUriPath());
+                + workflowModuleId
+                + (uiUriPath.startsWith("/") ? uiUriPath : "/" + uiUriPath);
 
     }
 
     @NoMappingMethod
     protected String proxiedWorkflowModuleUri(
-            final WorkflowCreatedOrUpdatedEvent event) {
+            final String workflowModuleId) {
 
-        if (event.getWorkflowModuleId() == null) {
+        if (workflowModuleId == null) {
             return null;
         }
 
-        return "/wm/"
-                + event.getWorkflowModuleId();
+        return "/wm/" + workflowModuleId;
 
     }
+
+    public abstract io.vanillabp.cockpit.devshell.simulator.businesscockpit.model.Person toModel(Person person);
+
+    public abstract io.vanillabp.cockpit.devshell.simulator.businesscockpit.model.Group toGroup(Group group);
 
     @Mapping(target = "id", source = "workflowId")
     @Mapping(target = "createdAt", source = "timestamp")
@@ -106,10 +163,32 @@ public abstract class OfficialApiMapper {
     @Mapping(target = "initiator", qualifiedByName = "person")
     @Mapping(target = "accessibleToUsers", qualifiedByName = "persons")
     @Mapping(target = "accessibleToGroups", qualifiedByName = "groups")
-    @Mapping(target = "version", source = "bpmnProcessVersion")
-    @Mapping(target = "uiUri", expression = "java(proxiedUiUri(event))")
-    @Mapping(target = "workflowModuleUri", expression = "java(proxiedWorkflowModuleUri(event))")
-    public abstract Workflow toApi(WorkflowCreatedOrUpdatedEvent event);
+    @Mapping(target = "version", ignore = true)
+    @Mapping(target = "uiUri", expression = "java(proxiedUiUri(event.getWorkflowModuleId(), event.getUiUriPath()))")
+    @Mapping(target = "workflowModuleUri", expression = "java(proxiedWorkflowModuleUri(event.getWorkflowModuleId()))")
+    public abstract io.vanillabp.cockpit.devshell.simulator.businesscockpit.model.Workflow toModel(WorkflowCreatedOrUpdatedEvent event);
+
+    @Mapping(target = "id", source = "workflowId")
+    @Mapping(target = "createdAt", source = "timestamp")
+    @Mapping(target = "updatedAt", source = "timestamp")
+    @Mapping(target = "endedAt", ignore = true)
+    @Mapping(target = "initiator", qualifiedByName = "person")
+    @Mapping(target = "accessibleToUsers", qualifiedByName = "persons")
+    @Mapping(target = "accessibleToGroups", qualifiedByName = "groups")
+    @Mapping(target = "version", ignore = true)
+    @Mapping(target = "uiUri", expression = "java(proxiedUiUri(event.getWorkflowModuleId(), event.getUiUriPath()))")
+    @Mapping(target = "workflowModuleUri", expression = "java(proxiedWorkflowModuleUri(event.getWorkflowModuleId()))")
+    public abstract io.vanillabp.cockpit.devshell.simulator.businesscockpit.model.Workflow toModel(WorkflowCreatedEvent event);
+
+    @Mapping(target = "requestId", ignore = true)
+    @Mapping(target = "serverTimestamp", expression = "java(java.time.OffsetDateTime.now())")
+    @Mapping(target = "workflows", source = "pageObjects")
+    @Mapping(target = "page", expression = "java(toApiWorkflowPage(workflowPage))")
+    public abstract Workflows toWorkflowsApi(Page<io.vanillabp.cockpit.devshell.simulator.businesscockpit.model.Workflow> workflowPage);
+
+    public abstract io.vanillabp.cockpit.gui.api.v1.Page toApiWorkflowPage(Page<io.vanillabp.cockpit.devshell.simulator.businesscockpit.model.Workflow> workflowPage);
+
+    public abstract io.vanillabp.cockpit.gui.api.v1.Workflow toApi(io.vanillabp.cockpit.devshell.simulator.businesscockpit.model.Workflow workflow);
 
     @Mapping(target = "id", source = "workflowId")
     @Mapping(target = "updatedAt", source = "timestamp")
@@ -118,10 +197,22 @@ public abstract class OfficialApiMapper {
     @Mapping(target = "initiator", qualifiedByName = "person")
     @Mapping(target = "accessibleToUsers", qualifiedByName = "persons")
     @Mapping(target = "accessibleToGroups", qualifiedByName = "groups")
-    @Mapping(target = "version", source = "bpmnProcessVersion")
+    @Mapping(target = "version", ignore = true)
     @Mapping(target = "uiUri", ignore = true)
     @Mapping(target = "workflowModuleUri", ignore = true)
-    public abstract void ontoApi(@MappingTarget Workflow workflow, WorkflowCreatedOrUpdatedEvent event);
+    public abstract void ontoModel(@MappingTarget io.vanillabp.cockpit.devshell.simulator.businesscockpit.model.Workflow workflow, WorkflowCreatedOrUpdatedEvent event);
+
+    @Mapping(target = "id", source = "workflowId")
+    @Mapping(target = "updatedAt", source = "timestamp")
+    @Mapping(target = "createdAt", ignore = true)
+    @Mapping(target = "endedAt", ignore = true)
+    @Mapping(target = "initiator", qualifiedByName = "person")
+    @Mapping(target = "accessibleToUsers", qualifiedByName = "persons")
+    @Mapping(target = "accessibleToGroups", qualifiedByName = "groups")
+    @Mapping(target = "version", ignore = true)
+    @Mapping(target = "uiUri", ignore = true)
+    @Mapping(target = "workflowModuleUri", ignore = true)
+    public abstract void ontoModel(@MappingTarget io.vanillabp.cockpit.devshell.simulator.businesscockpit.model.Workflow workflow, WorkflowUpdatedEvent event);
 
     @Mapping(target = "id", source = "workflowId")
     @Mapping(target = "updatedAt", source = "timestamp")
@@ -139,13 +230,13 @@ public abstract class OfficialApiMapper {
     @Mapping(target = "title", ignore = true)
     @Mapping(target = "uiUriType", ignore = true)
     @Mapping(target = "detailsFulltextSearch", ignore = true)
-    public abstract void ontoApi(@MappingTarget Workflow workflow, WorkflowCompletedEvent event);
+    public abstract void ontoModel(@MappingTarget io.vanillabp.cockpit.devshell.simulator.businesscockpit.model.Workflow workflow, WorkflowCompletedEvent event);
 
     @Mapping(target = "id", source = "workflowId")
     @Mapping(target = "updatedAt", source = "timestamp")
     @Mapping(target = "endedAt", source = "timestamp")
     @Mapping(target = "createdAt", ignore = true)
-    @Mapping(target = "initiator", qualifiedByName = "person")
+    @Mapping(target = "initiator", qualifiedByName = "apiPerson")
     @Mapping(target = "uiUri", ignore = true)
     @Mapping(target = "workflowModuleUri", ignore = true)
     @Mapping(target = "accessibleToUsers", ignore = true)
@@ -157,65 +248,109 @@ public abstract class OfficialApiMapper {
     @Mapping(target = "title", ignore = true)
     @Mapping(target = "uiUriType", ignore = true)
     @Mapping(target = "detailsFulltextSearch", ignore = true)
-    public abstract void ontoApi(@MappingTarget Workflow workflow, WorkflowCancelledEvent event);
+    public abstract void ontoModel(@MappingTarget io.vanillabp.cockpit.devshell.simulator.businesscockpit.model.Workflow workflow, WorkflowCancelledEvent event);
 
-    @NoMappingMethod
-    protected String proxiedUiUri(
-            final UserTaskCreatedOrUpdatedEvent event) {
+    @Mapping(target = "id", source = "workflowId")
+    @Mapping(target = "updatedAt", source = "timestamp")
+    @Mapping(target = "createdAt", ignore = true)
+    @Mapping(target = "endedAt", source = "timestamp")
+    @Mapping(target = "initiator", qualifiedByName = "apiPerson")
+    @Mapping(target = "accessibleToUsers", ignore = true)
+    @Mapping(target = "accessibleToGroups", ignore = true)
+    @Mapping(target = "version", ignore = true)
+    @Mapping(target = "uiUri", ignore = true)
+    @Mapping(target = "workflowModuleUri", ignore = true)
+    public abstract void ontoModel(@MappingTarget io.vanillabp.cockpit.devshell.simulator.businesscockpit.model.Workflow workflow, io.vanillabp.cockpit.bpms.api.v1_1.WorkflowCancelledEvent event);
 
-        if (event.getWorkflowModuleId() == null) {
-            return null;
-        }
-        if (event.getUiUriPath() == null) {
-            return null;
-        }
-
-        return "/wm/"
-                + event.getWorkflowModuleId()
-                + (event.getUiUriPath().startsWith("/")
-                ? event.getUiUriPath()
-                : "/" + event.getUiUriPath());
-
-    }
-
-    @NoMappingMethod
-    protected String proxiedWorkflowModuleUri(
-            final UserTaskCreatedOrUpdatedEvent event) {
-
-        if (event.getWorkflowModuleId() == null) {
-            return null;
-        }
-
-        return "/wm/"
-                + event.getWorkflowModuleId();
-
-    }
+    @Mapping(target = "id", source = "workflowId")
+    @Mapping(target = "updatedAt", source = "timestamp")
+    @Mapping(target = "createdAt", ignore = true)
+    @Mapping(target = "endedAt", source = "timestamp")
+    @Mapping(target = "initiator", qualifiedByName = "apiPerson")
+    @Mapping(target = "accessibleToUsers", ignore = true)
+    @Mapping(target = "accessibleToGroups", ignore = true)
+    @Mapping(target = "version", ignore = true)
+    @Mapping(target = "uiUri", ignore = true)
+    @Mapping(target = "workflowModuleUri", ignore = true)
+    public abstract void ontoModel(@MappingTarget io.vanillabp.cockpit.devshell.simulator.businesscockpit.model.Workflow workflow, io.vanillabp.cockpit.bpms.api.v1_1.WorkflowCompletedEvent event);
 
     @Mapping(target = "id", source = "userTaskId")
     @Mapping(target = "createdAt", source = "timestamp")
     @Mapping(target = "updatedAt", source = "timestamp")
     @Mapping(target = "endedAt", ignore = true)
-    @Mapping(target = "assignee", qualifiedByName = "person")
-    @Mapping(target = "candidateUsers", qualifiedByName = "persons")
-    @Mapping(target = "candidateGroups", qualifiedByName = "groups")
-    @Mapping(target = "version", source = "bpmnProcessVersion")
-    @Mapping(target = "uiUri", expression = "java(proxiedUiUri(event))")
-    @Mapping(target = "workflowModuleUri", expression = "java(proxiedWorkflowModuleUri(event))")
+    @Mapping(target = "assignee", qualifiedByName = "apiPerson")
+    @Mapping(target = "candidateUsers", qualifiedByName = "apiPersons")
+    @Mapping(target = "candidateGroups", qualifiedByName = "apiGroups")
+    @Mapping(target = "version", ignore = true)
+    @Mapping(target = "uiUri", expression = "java(proxiedUiUri(event.getWorkflowModuleId(), event.getUiUriPath()))")
+    @Mapping(target = "workflowModuleUri", expression = "java(proxiedWorkflowModuleUri(event.getWorkflowModuleId()))")
     @Mapping(target = "read", ignore = true)
-    public abstract UserTask toApi(UserTaskCreatedOrUpdatedEvent event);
+    public abstract io.vanillabp.cockpit.devshell.simulator.businesscockpit.model.UserTask toModel(UserTaskCreatedOrUpdatedEvent event);
 
     @Mapping(target = "id", source = "event.userTaskId")
     @Mapping(target = "createdAt", ignore = true)
     @Mapping(target = "updatedAt", source = "event.timestamp")
     @Mapping(target = "endedAt", ignore = true)
-    @Mapping(target = "assignee", qualifiedByName = "person")
-    @Mapping(target = "candidateUsers", qualifiedByName = "persons")
-    @Mapping(target = "candidateGroups", qualifiedByName = "groups")
-    @Mapping(target = "version", source = "event.bpmnProcessVersion")
+    @Mapping(target = "assignee", qualifiedByName = "apiPerson")
+    @Mapping(target = "candidateUsers", qualifiedByName = "apiPersons")
+    @Mapping(target = "candidateGroups", qualifiedByName = "apiGroups")
+    @Mapping(target = "version", ignore = true)
     @Mapping(target = "uiUri", ignore = true)
     @Mapping(target = "workflowModuleUri", ignore = true)
     @Mapping(target = "read", ignore = true)
-    public abstract void ontoApi(@MappingTarget UserTask userTask, UserTaskCreatedOrUpdatedEvent event);
+    public abstract void ontoModel(@MappingTarget io.vanillabp.cockpit.devshell.simulator.businesscockpit.model.UserTask userTask, UserTaskCreatedOrUpdatedEvent event);
+
+    @Mapping(target = "id", source = "event.userTaskId")
+    @Mapping(target = "createdAt", source = "event.timestamp")
+    @Mapping(target = "updatedAt", source = "event.timestamp")
+    @Mapping(target = "endedAt", ignore = true)
+    @Mapping(target = "assignee", qualifiedByName = "apiPerson")
+    @Mapping(target = "candidateUsers", qualifiedByName = "apiPersons")
+    @Mapping(target = "candidateGroups", qualifiedByName = "apiGroups")
+    @Mapping(target = "version", ignore = true)
+    @Mapping(target = "uiUri", expression = "java(proxiedUiUri(event.getWorkflowModuleId(), event.getUiUriPath()))")
+    @Mapping(target = "workflowModuleUri", expression = "java(proxiedWorkflowModuleUri(event.getWorkflowModuleId()))")
+    @Mapping(target = "read", ignore = true)
+    public abstract io.vanillabp.cockpit.devshell.simulator.businesscockpit.model.UserTask toModel(UserTaskCreatedEvent event);
+
+    @Mapping(target = "id", source = "event.userTaskId")
+    @Mapping(target = "createdAt", ignore = true)
+    @Mapping(target = "updatedAt", source = "event.timestamp")
+    @Mapping(target = "endedAt", ignore = true)
+    @Mapping(target = "assignee", qualifiedByName = "apiPerson")
+    @Mapping(target = "candidateUsers", qualifiedByName = "apiPersons")
+    @Mapping(target = "candidateGroups", qualifiedByName = "apiGroups")
+    @Mapping(target = "version", ignore = true)
+    @Mapping(target = "uiUri", ignore = true)
+    @Mapping(target = "workflowModuleUri", ignore = true)
+    @Mapping(target = "read", ignore = true)
+    public abstract void ontoModel(@MappingTarget io.vanillabp.cockpit.devshell.simulator.businesscockpit.model.UserTask userTask, UserTaskUpdatedEvent event);
+
+    @Mapping(target = "id", source = "event.userTaskId")
+    @Mapping(target = "createdAt", ignore = true)
+    @Mapping(target = "updatedAt", source = "event.timestamp")
+    @Mapping(target = "endedAt", source = "event.timestamp")
+    @Mapping(target = "assignee", ignore = true)
+    @Mapping(target = "candidateUsers", ignore = true)
+    @Mapping(target = "candidateGroups", ignore = true)
+    @Mapping(target = "version", ignore = true)
+    @Mapping(target = "uiUri", ignore = true)
+    @Mapping(target = "workflowModuleUri", ignore = true)
+    @Mapping(target = "read", ignore = true)
+    public abstract void ontoModel(@MappingTarget io.vanillabp.cockpit.devshell.simulator.businesscockpit.model.UserTask userTask, io.vanillabp.cockpit.bpms.api.v1_1.UserTaskCompletedEvent event);
+
+    @Mapping(target = "id", source = "event.userTaskId")
+    @Mapping(target = "createdAt", ignore = true)
+    @Mapping(target = "updatedAt", source = "event.timestamp")
+    @Mapping(target = "endedAt", source = "event.timestamp")
+    @Mapping(target = "assignee", ignore = true)
+    @Mapping(target = "candidateUsers", ignore = true)
+    @Mapping(target = "candidateGroups", ignore = true)
+    @Mapping(target = "version", ignore = true)
+    @Mapping(target = "uiUri", ignore = true)
+    @Mapping(target = "workflowModuleUri", ignore = true)
+    @Mapping(target = "read", ignore = true)
+    public abstract void ontoModel(@MappingTarget io.vanillabp.cockpit.devshell.simulator.businesscockpit.model.UserTask userTask, io.vanillabp.cockpit.bpms.api.v1_1.UserTaskCancelledEvent event);
 
     @Mapping(target = "id", source = "userTaskId")
     @Mapping(target = "updatedAt", source = "timestamp")
@@ -243,7 +378,7 @@ public abstract class OfficialApiMapper {
     @Mapping(target = "title", ignore = true)
     @Mapping(target = "uiUriType", ignore = true)
     @Mapping(target = "detailsFulltextSearch", ignore = true)
-    public abstract void ontoApi(@MappingTarget UserTask userTask, UserTaskCompletedEvent event);
+    public abstract void ontoModel(@MappingTarget io.vanillabp.cockpit.devshell.simulator.businesscockpit.model.UserTask userTask, UserTaskCompletedEvent event);
 
     @Mapping(target = "id", source = "userTaskId")
     @Mapping(target = "updatedAt", source = "timestamp")
@@ -271,6 +406,15 @@ public abstract class OfficialApiMapper {
     @Mapping(target = "title", ignore = true)
     @Mapping(target = "uiUriType", ignore = true)
     @Mapping(target = "detailsFulltextSearch", ignore = true)
-    public abstract void ontoApi(@MappingTarget UserTask userTask, UserTaskCancelledEvent event);
+    public abstract void ontoModel(@MappingTarget io.vanillabp.cockpit.devshell.simulator.businesscockpit.model.UserTask userTask, UserTaskCancelledEvent event);
+
+    @Mapping(target = "serverTimestamp", expression = "java(java.time.OffsetDateTime.now())")
+    @Mapping(target = "userTasks", source = "pageObjects")
+    @Mapping(target = "page", expression = "java(toApiUserTaskPage(userTaskPage))")
+    public abstract UserTasks toUserTasksApi(Page<io.vanillabp.cockpit.devshell.simulator.businesscockpit.model.UserTask> userTaskPage);
+
+    public abstract io.vanillabp.cockpit.gui.api.v1.Page toApiUserTaskPage(Page<io.vanillabp.cockpit.devshell.simulator.businesscockpit.model.UserTask> userTaskPage);
+
+    public abstract io.vanillabp.cockpit.gui.api.v1.UserTask toApi(io.vanillabp.cockpit.devshell.simulator.businesscockpit.model.UserTask userTask);
 
 }
